--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "bin": {
     "geekify": "geekify.js"
   },
-  "dependencies"  : {
-    "commander": ">=0.6.0",
+  "dependencies": {
     "colors": ">=1.1.2",
+    "commander": ">=0.6.0",
+    "figlet": "^1.2.0",
     "promise": ">=7.0.2"
   },
   "author": "harpreetkhalsagtbit (https://github.com/harpreetkhalsagtbit)",
