--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: node_js
 node_js:
   - "iojs"
   - "node"
-  - "0.12"
-  - "0.11"
-  - "0.10"
+node_js:
+  - '8'
+  - '6'
+  - '4'
 sudo: false
